changed css for buttons to not scale up as much, from 1.5 to 1.10

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -115,3 +115,15 @@ body {
   color: #fff;
   font-size: 18px;
 }
+a{
+  text-decoration: none;
+  color:#fff;
+}
+
+.play-now{
+  background-color: #106cfc;
+}
+
+button:hover{
+  transform:scale(1.10);
+}
