--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,6 +28,9 @@ body{
   .question{
     font-weight: 600;
   }
+  #question{
+    width:450px;
+  }
   .answers {
       margin-bottom: 20px;
   }
@@ -45,48 +48,42 @@ body{
   #submit:hover{
     background-color: #3a8;
   }
+  #previous{
+    font-family: sans-serif;
+    font-size: 20px;
+    background-color: #297;
+    color: #fff;
+    border: 0px;
+    border-radius: 3px;
+    padding: 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+  }
+  #previous:hover{
+    background-color: #3a8;
+  }
+
 
   .container-fluid{
       padding-top:10px;
   }
 
   /*Styles for Quiz */
-  /** code by webdevtrick (https://webdevtrick.com) **/
-body {
-  background-color: #413D3D;
+
+.quiz-container{
+  border-radius: 15px;
+  width: 500px;
 }
 
-.grid {
-  width: 600px;
-  max-width:100%;
-  height: 500px;
-  max-height:100%;
-  margin: 0 auto;
-  background-color: #106cfc;
-  padding: 10px 50px 50px 50px;
+
+ul{
+  list-style-type: none;
 }
 
-.grid h1 {
-  font-family: "sans-serif";
-  background-color: #106cfc;
-  font-size: 60px;
-  text-align: center;
-  color: #ffffff;
-  padding: 2px 0px;
-  
+ul lu label{
+  cursor:pointer;
 }
 
-#score {
-  color: #fff;
-  text-align: center;
-  font-size: 30px;
-}
-
-.grid #question {
-  font-family: "monospace";
-  font-size: 30px;
-  color: #fff;
-}
 
 .buttons {
   margin-top: 30px;
